add ability to create company and subdivision

--- a/client/src/app/shared/_modals/modal-container/modal-container.component.html
+++ b/client/src/app/shared/_modals/modal-container/modal-container.component.html
@@ -3,7 +3,7 @@
     <mat-icon>close</mat-icon>
   </div>
   <div>
-    <h1 mat-dialog-title class="font-medium text-2xl" *ngIf="title">{{title}}</h1>
+    <h1 mat-dialog-title class="font-medium text-2xl text-center" *ngIf="title">{{title}}</h1>
     <ng-content></ng-content>
   </div>
 </div>
