--- a/client/src/app/auth/registration/registration.component.html
+++ b/client/src/app/auth/registration/registration.component.html
@@ -22,8 +22,11 @@
       </div>
       <!-- <app-input label="Компанія" [placeholder]="'Почніть вводити назву компанії'" [model]="search"></app-input> -->
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
-      <p class="mt-2 text-center text-red-600 h-[20px]">{{(registrationError$ | async) ? (registrationError$ | async) : ''  }}</p>
-      <div class="flex justify-center">
+      <p class="mt-2 text-center text-red-600 h-[20px]">{{(registrationError$ | async) ?? '' }}</p>
+      <div class="flex flex-col justify-center items-center">
+        <p class="text-base italic">Вже маєте акаунт?
+          <a [routerLink]="['../login']" class="underline text-[#2CA9D5] cursor-pointer">Увійти</a>
+        </p>
         <app-button text="Зареєструватись" [disabled]="!userForm.valid" type="submit"
           [classList]="['mt-3', 'bg-[#5FCFF7]', 'text-white', 'h-[45px]', 'w-[152px]']"></app-button>
       </div>
