--- a/client/src/app/shared/_forms/input/input.component.scss
+++ b/client/src/app/shared/_forms/input/input.component.scss
@@ -1,3 +1,10 @@
 input:focus-visible {
   outline: none;
 }
+
+::ng-deep .mat-icon {
+  position: absolute;
+  right: 10px;
+  top: 16px;
+  cursor: pointer;
+}
