add header & requests container

--- a/client/src/app/shared/_forms/input/input.component.scss
+++ b/client/src/app/shared/_forms/input/input.component.scss
@@ -2,7 +2,7 @@ input:focus-visible {
   outline: none;
 }
 
-::ng-deep .mat-icon {
+.mat-icon {
   position: absolute;
   right: 10px;
   top: 16px;
