--- a/client/src/app/requests/requests-container/requests-container.component.html
+++ b/client/src/app/requests/requests-container/requests-container.component.html
@@ -4,8 +4,8 @@
   </div>
   <div class="grid grid-rows-[auto_1fr] gap-y-8">
     <div class="flex flex-row justify-between items-center">
-      <h1 class="text-2xl font-medium">Запити</h1>
-      <app-button text="+ Створити запит" type="button" [classList]="['h-[45px]', 'w-[180px]']"
+      <h1 class="text-2xl font-medium">Заявки</h1>
+      <app-button text="+ Створити заявку" type="button" [classList]="['h-[45px]', 'w-[180px]']"
         (click)="openCreateRequestDialog()"></app-button>
     </div>
     <app-requests-list></app-requests-list>
