--- a/client/src/app/requests/requests-list/requests-list.component.html
+++ b/client/src/app/requests/requests-list/requests-list.component.html
@@ -1,6 +1,6 @@
 <div class="h-full flex justify-center items-center">
   <div class="flex flex-col items-center">
     <mat-icon>content_paste_search</mat-icon>
-    <span class="mt-3 text-[#898E96] font-semibold">Запитів немає</span>
+    <span class="mt-3 text-[#898E96] font-semibold">Заявок немає</span>
   </div>
 </div>
