--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
 
   </div>
   <div class="w-[30%] flex justify-between">
-    <a [routerLink]="['requests']" class="cursor-pointer">Запити</a>
+    <a [routerLink]="['requests']" class="cursor-pointer">Заявки</a>
     <a [routerLink]="['auth/login']" class="cursor-pointer">Замовлення</a>
     <a [routerLink]="['auth/login']" class="cursor-pointer">Контракти</a>
   </div>
