display company requests

--- a/client/src/app/core/dashboard/dashboard.component.html
+++ b/client/src/app/core/dashboard/dashboard.component.html
@@ -1,2 +1,9 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<!-- <div class="relative">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <div class="absolute inset-x-1/2 inset-y-1/2">
+    <mat-spinner *ngIf="(loading$ | async)" diameter="70"></mat-spinner>
+  </div>
+</div> -->
