--- a/client/src/app/requests/requests-list/requests-list.component.html
+++ b/client/src/app/requests/requests-list/requests-list.component.html
@@ -1,6 +1,12 @@
-<div class="h-full flex justify-center items-center">
-  <div class="flex flex-col items-center">
+<div class="h-full w-full flex justify-center items-center relative">
+  <div class="flex flex-col items-center" *ngIf="!(requests$ | async) && !(loading$ | async)">
     <mat-icon>content_paste_search</mat-icon>
     <span class="mt-3 text-[#898E96] font-semibold">Заявок немає</span>
+  </div>
+  <div *ngIf="(requests$ | async) as requests" class="w-full">
+    <app-requests-list-item *ngFor="let request of requests" [request]="request"></app-requests-list-item>
+  </div>
+  <div class="absolute inset-x-[40%] inset-y-[40%]">
+    <mat-spinner *ngIf="(loading$ | async)" diameter="70"></mat-spinner>
   </div>
 </div>
