--- a/client/src/app/requests/create-request-modal/create-request-modal.component.html
+++ b/client/src/app/requests/create-request-modal/create-request-modal.component.html
@@ -22,7 +22,7 @@
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
       <p class="mt-2 text-center text-red-600 h-[20px]">{{(error$ | async) ?? ''}}</p>
       <div class="flex justify-center">
-        <app-button text="Створити" [disabled]="false" type="submit"
+        <app-button text="Створити" [disabled]="!requestForm.valid" type="submit"
           [classList]="['mt-3', 'h-[45px]', 'w-[152px]']"></app-button>
       </div>
     </form>
