add pagination to requests

--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -10,7 +10,7 @@
           <a [routerLink]="['../register']" class="underline text-[#2CA9D5] cursor-pointer">Зареєструватись</a>
         </p>
         <app-button text="Увійти" [disabled]="!loginForm.valid" type="submit"
-          [classList]="['mt-3', 'bg-[#5FCFF7]', 'text-white', 'h-[45px]', 'w-[152px]']"></app-button>
+          [classList]="['mt-3', 'h-[45px]', 'w-[152px]']"></app-button>
       </div>
     </form>
   </div>
