--- a/client/src/app/shared/button/button.component.html
+++ b/client/src/app/shared/button/button.component.html
@@ -1,6 +1,6 @@
 <button
   [ngClass]="classList.concat(['p-2', 'text-base', 'rounded-lg',
-    disabled ? 'cursor-not-allowed' : 'cursor-pointer', 'border-none'], colors)"
+    disabled ? 'cursor-not-allowed' : 'cursor-pointer'], colors)"
   [type]="type"
   [disabled]="disabled"
   (click)="click()">
