--- a/client/src/app/auth/registration/registration.component.html
+++ b/client/src/app/auth/registration/registration.component.html
@@ -28,7 +28,7 @@
           <a [routerLink]="['../login']" class="underline text-[#2CA9D5] cursor-pointer">Увійти</a>
         </p>
         <app-button text="Зареєструватись" [disabled]="!userForm.valid" type="submit"
-          [classList]="['mt-3', 'bg-[#5FCFF7]', 'text-white', 'h-[45px]', 'w-[152px]']"></app-button>
+          [classList]="['mt-3', 'h-[45px]', 'w-[152px]']"></app-button>
       </div>
     </form>
   </div>
