--- a/client/src/app/requests/requests-list/requests-list.component.html
+++ b/client/src/app/requests/requests-list/requests-list.component.html
@@ -3,10 +3,14 @@
     <mat-icon>content_paste_search</mat-icon>
     <span class="mt-3 text-[#898E96] font-semibold">Заявок немає</span>
   </div>
-  <div *ngIf="(requests$ | async) as requests" class="w-full">
-    <app-requests-list-item *ngFor="let request of requests" [request]="request"></app-requests-list-item>
+  <div *ngIf="pagination && (requests$ | async) as requests" class="w-full">
+    <app-requests-list-item *ngFor="let request of requests | paginate: { id: 'requests', itemsPerPage: this.pagination.itemsPerPage, currentPage: this.pagination.currentPage, totalItems: this.pagination.totalItems}" [request]="request"></app-requests-list-item>
+
+    <div class="flex justify-center">
+      <pagination-controls class="request-pagination" id="requests" previousLabel="Попередня" nextLabel="Наступна" (pageChange)="pageChanged($event)"></pagination-controls>
+    </div>
   </div>
-  <div class="absolute inset-x-[40%] inset-y-[40%]">
+  <div class="absolute inset-x-[45%] inset-y-[45%]">
     <mat-spinner *ngIf="(loading$ | async)" diameter="70"></mat-spinner>
   </div>
 </div>
