add ability to logout

--- a/client/src/app/requests/requests-container/requests-container.component.html
+++ b/client/src/app/requests/requests-container/requests-container.component.html
@@ -1,6 +1,7 @@
 <div class="container w-4/5 mx-auto mt-10 grid grid-cols-[25%_1fr] gap-x-8">
   <div class="">
-    <app-requests-filter-sort-actions></app-requests-filter-sort-actions>
+    <!-- <app-requests-filter-sort-actions></app-requests-filter-sort-actions> -->
+    <app-requests-actions></app-requests-actions>
   </div>
   <div class="grid grid-rows-[auto_1fr] gap-y-6">
     <div class="flex flex-row justify-between items-center">
