--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -14,6 +14,6 @@
         <mat-spinner diameter="30"></mat-spinner>
       </ng-template>
     </div>
-    <a [routerLink]="['auth/login']" class="cursor-pointer">Вийти</a>
+    <span class="cursor-pointer" (click)="logout()">Вийти</span>
   </div>
 </div>
