--- a/client/src/app/requests/requests-list/requests-list.component.html
+++ b/client/src/app/requests/requests-list/requests-list.component.html
@@ -1,11 +1,11 @@
 <div class="h-full w-full flex justify-center relative">
-  <div class="flex flex-col justify-center items-center" *ngIf="!(loading$ | async) && (requests$ | async) as requests">
+  <div class="flex flex-col justify-center items-center" *ngIf="!(loading$ | async) && requests">
     <div class="flex flex-col items-center" *ngIf="requests.length === 0">
       <mat-icon>content_paste_search</mat-icon>
       <span class="mt-3 text-[#898E96] font-semibold">Заявок немає</span>
     </div>
   </div>
-  <div *ngIf="pagination && (requests$ | async)?.length > 0 && (requests$ | async) as requests" class="w-full">
+  <div *ngIf="pagination && requests?.length > 0 && requests" class="w-full">
     <app-requests-list-item *ngFor="let request of requests | paginate: { id: 'requests', itemsPerPage: this.pagination.itemsPerPage, currentPage: this.pagination.currentPage, totalItems: this.pagination.totalItems}" [request]="request"></app-requests-list-item>
 
     <div class="flex justify-center">
@@ -13,6 +13,6 @@
     </div>
   </div>
   <div class="absolute inset-x-[45%] inset-y-[45%]">
-    <mat-spinner *ngIf="(loading$ | async) || !(requests$ | async)" diameter="70"></mat-spinner>
+    <mat-spinner *ngIf="(loading$ | async) || !requests" diameter="70"></mat-spinner>
   </div>
 </div>
