--- a/client/src/app/shared/button/button.component.html
+++ b/client/src/app/shared/button/button.component.html
@@ -4,10 +4,11 @@
   [type]="type"
   [disabled]="disabled"
   (click)="click()">
-  <span *ngIf="!(loading$ | async) || !showSpinner; else spinner">{{ text }}</span>
+  {{ text }}
+  <!-- <span *ngIf="!(loading$ | async) || !showSpinner; else spinner">{{ text }}</span>
   <ng-template #spinner>
     <mat-spinner diameter="30"></mat-spinner>
-  </ng-template>
+  </ng-template> -->
   <!-- <span *ngIf="!showSpinner; else spinner">{{ text }}</span>
   <ng-template #spinner>
     <mat-spinner diameter="30"></mat-spinner>
