--- a/client/src/app/requests/requests-container/requests-container.component.html
+++ b/client/src/app/requests/requests-container/requests-container.component.html
@@ -1,5 +1,5 @@
 <div class="container w-4/5 mx-auto mt-10 grid grid-cols-[25%_1fr] gap-x-8">
-  <div class="">
+  <div>
     <!-- <app-requests-filter-sort-actions></app-requests-filter-sort-actions> -->
     <app-requests-actions></app-requests-actions>
   </div>
