--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="w-[30%] flex justify-between">
     <a [routerLink]="['requests']" class="cursor-pointer">Заявки</a>
-    <a [routerLink]="['auth/login']" class="cursor-pointer">Замовлення</a>
+    <a [routerLink]="['orders']" class="cursor-pointer">Замовлення</a>
     <a [routerLink]="['auth/login']" class="cursor-pointer">Контракти</a>
   </div>
   <div class="w-[25%] grid grid-cols-[80%_20%] items-center">
