--- a/client/src/app/requests/requests-actions/requests-actions.component.html
+++ b/client/src/app/requests/requests-actions/requests-actions.component.html
@@ -1,7 +1,10 @@
 <div class="mt-16">
-  <!-- *ngIf="(user$ | async)?.role === 'Заявник'" -->
-  <app-dropdown label="Статус" [control]="getFormControl('status')" [displayProps]="['value']" [items]="requestStatuses" [optionValueProp]="'key'" [required]="false" [emitSelectionChangeEvent]="true" (onSelectionChange)="getCompanyRequestsByStatus($event)" *ngIf="(user$ | async)?.role === 'Заявник'">
+  <app-dropdown label="Статус" [control]="getFormControl('status')" [displayProps]="['value']" [items]="requestStatuses" [optionValueProp]="'key'" [required]="false" [emitSelectionChangeEvent]="true" (onSelectionChange)="setRequestParamsStatus($event)" *ngIf="(user$ | async)?.role === 'Заявник'">
   </app-dropdown>
-  <app-dropdown label="Товар" [control]="getFormControl('goodTitle')" [displayProps]="['value']" [items]="goods"  [optionValueProp]="'key'" [required]="false" [emitSelectionChangeEvent]="true" (onSelectionChange)="getCompanyRequestsByGoodTitle($event)">
+
+  <app-dropdown label="Категорія" [control]="getFormControl('categoryTitle')" [displayProps]="['value']" [items]="(categories$ | async)"  [optionValueProp]="'key'" [required]="false" [emitSelectionChangeEvent]="true" (onSelectionChange)="setRequestParamsCategory($event)">
+  </app-dropdown>
+
+  <app-dropdown label="Товар" [control]="getFormControl('goodTitle')" [displayProps]="['value']" [items]="(goods$ | async)"  [optionValueProp]="'key'" [required]="false" [emitSelectionChangeEvent]="true" (onSelectionChange)="setRequestParamsGood($event)">
   </app-dropdown>
 </div>
