--- a/client/src/app/requests/requests-list-item/requests-list-item.component.html
+++ b/client/src/app/requests/requests-list-item/requests-list-item.component.html
@@ -3,6 +3,7 @@
     <div>
       <h3 class="font-semibold text-xl text-[#2FCB80]">{{request.good.title}} ({{request.quantity}} {{getShortenMeasurementUnit(request.measurementUnit)}})</h3>
       <p class="mt-2">{{request.subdivision.title}} ({{subdivisionAddress}})</p>
+      <p class="mt-3">Категорія: <span class="underline">{{ request.good.categoryTitle }}</span></p>
       <p class="mt-3 italic text-[#A9A9A9]">{{request.description}}</p>
       <p class="mt-3">Бюджет: {{request.budget}} (грн.)</p>
     </div>
