--- a/client/src/app/orders/orders-list-item/orders-list-item.component.html
+++ b/client/src/app/orders/orders-list-item/orders-list-item.component.html
@@ -2,16 +2,23 @@
   <div class="grid grid-cols-[50%_15%_1fr] gap-x-4">
     <div>
       <h3 class="font-semibold text-xl text-[#2FCB80]">{{order.title}}</h3>
+      <p class="mt-3 underline">Номер: {{ order.id }}</p>
+      <p class="mt-3">{{ order.buyerContactPerson.companyName }}</p>
       <p class="mt-3">Бюджет: {{order.budget}} (грн.)</p>
     </div>
 
     <div>
-
+      <span [ngClass]="['h-fit', 'text-center', orderStatusesColors[order.status]]">{{orderStatuses[order.status]}}</span>
     </div>
 
     <div>
       <p class="text-right italic text-[#A9A9A9] text-sm">Створене {{order.createdAt | date:'HH:mm:ss dd MMMM y':'uk-UA'}}</p>
 
+      <div *ngIf="(user$ | async) as user">
+        <div class="grid justify-center" *ngIf="user.id === order?.buyerContactPerson.id && order?.status === 'Active' && user.role === 'Замовник'">
+          <app-button text="Скасувати" type="button" [classList]="['mt-6', 'border', 'border-[#E74C3C]', 'h-[45px]', 'w-[152px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelOrder()"></app-button>
+        </div>
+      </div>
     </div>
 
   </div>
