--- a/client/src/app/orders/orders-container/orders-container.component.html
+++ b/client/src/app/orders/orders-container/orders-container.component.html
@@ -1,6 +1,6 @@
 <div class="container w-4/5 mx-auto mt-10 grid grid-cols-[25%_1fr] gap-x-8">
   <div class="">
-    <!-- <app-orders-actions></app-orders-actions> -->
+    <app-orders-actions></app-orders-actions>
   </div>
   <div class="grid grid-rows-[45px_1fr] gap-y-6">
     <div class="flex flex-row justify-between items-center">
