--- a/client/src/app/requests/requests-list-item/requests-list-item.component.html
+++ b/client/src/app/requests/requests-list-item/requests-list-item.component.html
@@ -1,9 +1,9 @@
 <div class="w-full bg-white rounded-xl shadow-gray-400 p-6 mb-4">
   <div class="grid grid-cols-[50%_15%_1fr] gap-x-4">
     <div>
-      <h3 class="font-semibold text-xl text-[#2FCB80]">{{request.good.title}} ({{request.quantity}} {{getShortenMeasurementUnit(request.measurementUnit)}})</h3>
+      <h3 class="font-semibold text-xl text-[#2FCB80]">{{request.procurementItem.title}} ({{request.quantity}} {{getShortenMeasurementUnit(request.measurementUnit)}})</h3>
       <p class="mt-2">{{request.subdivision.title}} ({{subdivisionAddress}})</p>
-      <p class="mt-3">Категорія: <span class="underline">{{ request.good.categoryTitle }}</span></p>
+      <p class="mt-3">Категорія: <span class="underline">{{ request.procurementItem.categoryTitle }}</span></p>
       <p class="mt-3 italic text-[#A9A9A9]">{{request.description}}</p>
       <p class="mt-3">Бюджет: {{request.budget}} (грн.)</p>
     </div>
