--- a/client/src/app/orders/orders-list-item/orders-list-item.component.html
+++ b/client/src/app/orders/orders-list-item/orders-list-item.component.html
@@ -11,12 +11,14 @@
       <span [ngClass]="['h-fit', 'text-center', orderStatusesColors[order.status]]">{{orderStatuses[order.status]}}</span>
     </div>
 
-    <div>
-      <p class="text-right italic text-[#A9A9A9] text-sm">Створене {{order.createdAt | date:'HH:mm:ss dd MMMM y':'uk-UA'}}</p>
-
-      <div *ngIf="(user$ | async) as user">
-        <div class="grid justify-center" *ngIf="user.id === order?.buyerContactPerson.id && order?.status === 'Active' && user.role === 'Замовник'">
-          <app-button text="Скасувати" type="button" [classList]="['mt-6', 'border', 'border-[#E74C3C]', 'h-[45px]', 'w-[152px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelOrder()"></app-button>
+    <div class="grid grid-flow-row grid-rows-[auto_1fr] gap-y-3">
+      <p class="text-right italic text-[#A9A9A9] text-sm">
+        Створене {{order.createdAt | date:'HH:mm:ss dd MMMM y':'uk-UA'}}
+      </p>
+      <div class="grid justify-center items-center" *ngIf="(user$ | async) as user">
+        <app-button text="Деталі" type="button" [classList]="['h-[45px]', 'w-[152px]']" (click)="openOrderDetails()"></app-button>
+        <div *ngIf="user.id === order?.buyerContactPerson.id && order?.status === 'Active' && user.role === 'Замовник'">
+          <app-button text="Скасувати" type="button" [classList]="['border', 'border-[#E74C3C]', 'h-[45px]', 'w-[152px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelOrder()"></app-button>
         </div>
       </div>
     </div>
