--- a/client/src/app/requests/requests-list-item/requests-list-item.component.html
+++ b/client/src/app/requests/requests-list-item/requests-list-item.component.html
@@ -8,18 +8,18 @@
       <p class="mt-3">Бюджет: {{request.budget}} (грн.)</p>
     </div>
     <span [ngClass]="['h-fit', 'text-center', requestStatusesColors[request.status]]">{{requestStatuses[request.status]}}</span>
-    <div>
+    <div class="grid grid-flow-row grid-rows-[auto_1fr] gap-y-3">
       <p class="text-right italic text-[#A9A9A9] text-sm">Створена {{request.createdAt | date:'HH:mm:ss dd MMMM y':'uk-UA'}}</p>
 
-      <div *ngIf="(user$ | async) as user">
+      <div class="grid justify-center items-center" *ngIf="(user$ | async) as user">
         <div class="grid justify-center" *ngIf="user.subdivisionId === request?.subdivision?.id && request?.status === 'Active' && user.role === 'Заявник'">
-          <app-button text="Редагувати" type="button" [classList]="['mt-2', 'h-[45px]', 'w-[152px]']" (click)="openEditRequestDialog()"></app-button>
+          <app-button text="Редагувати" type="button" [classList]="['h-[45px]', 'w-[152px]']" (click)="openEditRequestDialog()"></app-button>
           <app-button text="Скасувати" type="button" [classList]="['mt-2', 'border', 'border-[#E74C3C]', 'h-[45px]', 'w-[152px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelRequest()"></app-button>
         </div>
-        <div class="grid justify-center mt-6" *ngIf="request?.status === 'Active' && user.role === 'Замовник'">
-          <app-button *ngIf="!(orderRequests$ | async)?.includes(request.id); else removeFromOrderBtn" text="Додати до замовлення" type="button" [classList]="['mt-2', 'h-[45px]', 'w-auto']" (click)="addRequestToOrder()"></app-button>
+        <div *ngIf="request?.status === 'Active' && user.role === 'Замовник'">
+          <app-button *ngIf="!(orderRequests$ | async)?.includes(request.id); else removeFromOrderBtn" text="Додати до замовлення" type="button" [classList]="['h-[45px]', 'w-[209px]']" (click)="addRequestToOrder()"></app-button>
           <ng-template #removeFromOrderBtn>
-            <app-button text="Прибрати із замовлення" type="button" [classList]="['mt-2', 'h-[45px]', 'w-auto', 'border', 'border-[#E74C3C]']" (click)="deleteRequestFromOrder()" [colors]="['bg-transparent', 'text-[#E74C3C]']"></app-button>
+            <app-button text="Прибрати із замовлення" type="button" [classList]="['h-[45px]', 'w-[209px]', 'border', 'border-[#E74C3C]']" (click)="deleteRequestFromOrder()" [colors]="['bg-transparent', 'text-[#E74C3C]']"></app-button>
           </ng-template>
         </div>
       </div>
