--- a/client/src/app/auth/create-subdivision-modal/create-subdivision-modal.component.html
+++ b/client/src/app/auth/create-subdivision-modal/create-subdivision-modal.component.html
@@ -3,8 +3,9 @@
     <form class="w-full mt-3" [formGroup]="subdivisionForm" (ngSubmit)="onSubmit()">
       <app-input label="Назва" [control]="getFormControl('title')"></app-input>
       <app-input label="Місто" [control]="getFormControl('city')"></app-input>
+      <app-input label="Область" [control]="getFormControl('region')" [required]="false"></app-input>
       <app-input label="Вулиця" [control]="getFormControl('street')"></app-input>
-      <app-input label="Приміщення" [control]="getFormControl('apartment')" [required]="false"></app-input>
+      <app-input label="Номер будівлі" [control]="getFormControl('buildingNumber')" [required]="false"></app-input>
       <app-input label="Поштовий індекс" [control]="getFormControl('zipCode')"></app-input>
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
       <p class="mt-2 text-center text-red-600 h-[20px]">{{(error$ | async) ?? ''}}</p>
