--- a/client/src/app/auth/registration/registration.component.html
+++ b/client/src/app/auth/registration/registration.component.html
@@ -14,7 +14,7 @@
           <app-dropdown label="Компанія" [control]="getFormControl('companyId')" [displayProps]="['title']" [items]="(companies$ | async)">
             <p class="absolute -bottom-5 text-sm italic">Не знайшли свою компанію? <span class="underline text-[#2CA9D5] cursor-pointer" (click)="openCreateCompanyDialog()">Зареєструйте її зараз</span></p>
           </app-dropdown>
-          <app-dropdown label="Підрозділ" [control]="getFormControl('subdivisionId')" [displayProps]="['title','city']" [items]="(subdivisions$ | async)" errorMessage="Підрозділ має бути обраний">
+          <app-dropdown label="Підрозділ" [control]="getFormControl('subdivisionId')" [displayProps]="['title']" [items]="(subdivisions$ | async)" errorMessage="Підрозділ має бути обраний">
             <p class="absolute -bottom-5 text-sm italic">Не знайшли свій підрозділ? <span class="underline text-[#2CA9D5] cursor-pointer" (click)="openCreateSubdivisionDialog()">Зареєструйте його зараз</span></p>
           </app-dropdown>
           <app-input label="Пароль" type="password" [control]="getFormControl('password')"></app-input>
