--- a/client/src/app/orders/order-details/order-details.component.html
+++ b/client/src/app/orders/order-details/order-details.component.html
@@ -36,7 +36,12 @@
     </div>
     <div class="mt-6">
       <h3 class="font-semibold text-xl text-[#2FCB80]">Пропозиції</h3>
-      <p class="mt-4">Пропозицій немає</p>
+      <!-- <p class="mt-4">Пропозицій немає</p> -->
+      <div class="mt-4" *ngIf="(user$ | async)?.role === 'Постачальник'">
+        <app-button text="Подати пропозицію" type="button" [classList]="['border', 'border-[#2FCB80]', 'h-[45px]', 'w-auto']" [colors]="['bg-transparent', 'text-[#2FCB80]']" (click)="openSubmitProposalDialog()"></app-button>
+        <!-- <app-button text="Подати пропозицію" type="button" [classList]="['h-[45px]', 'w-auto']" [colors]="['bg-[#2FCB80]', 'text-white']" (click)="openSubmitProposalDialog()"></app-button> -->
+      </div>
+
       <!-- <div class="mt-3 flex flex-col justify-center gap-y-2 p-3">
 
       </div> -->
