--- a/client/src/app/requests/create-order-modal/create-order-modal.component.html
+++ b/client/src/app/requests/create-order-modal/create-order-modal.component.html
@@ -2,22 +2,10 @@
   <div mat-dialog-content>
     <form class="w-full mt-3" [formGroup]="orderForm" (ngSubmit)="onSubmit()">
       <app-textarea label="Назва" [control]="getFormControl('title')"></app-textarea>
-      <!-- <app-dropdown *ngIf="deliveryAddressExists" label="Адреса доставки" [control]="getFormControl('deliveryAddressId')" [displayProps]="['title']" [items]="(addresses$ | async)"
-        errorMessage="Адреса доставки має бути обрана">
-        <p class="text-sm italic">Не знайшли адресу у списку? <span class="underline text-[#2CA9D5] cursor-pointer" (click)="toggleDeliveryAddressExistence()">Натисність,</span> щоб додати нову</p>
-      </app-dropdown> -->
       <p class="mb-2">Адреса доставки <span class="text-red-600">*</span></p>
-      <div *ngIf="deliveryAddressExists" class="mb-2 relative">
-        <mat-form-field appearance="fill">
-          <mat-select [formControl]="getFormControl('deliveryAddressId')">
-            <mat-option *ngFor="let address of (addresses$ | async)" [value]="address['id']">
-              {{ tranformAddress(address) }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <mat-error>{{ (getFormControl('deliveryAddressId').errors?.required && getFormControl('deliveryAddressId').touched) ? 'Адреса доставки має бути обрана' : '' }} </mat-error>
+      <app-dropdown *ngIf="deliveryAddressExists" [control]="getFormControl('deliveryAddressId')" [displayPropFunc]="tranformAddress" [displayLabel]="false" [items]="(addresses$ | async)" errorMessage="Адреса доставки має бути обрана">
         <p class="text-sm italic">Не знайшли адресу у списку? <span class="underline text-[#2CA9D5] cursor-pointer" (click)="toggleDeliveryAddressExistence()">Натисність,</span> щоб додати нову</p>
-      </div>
+      </app-dropdown>
       <div *ngIf="!deliveryAddressExists">
         <app-input label="Місто" [control]="getFormControl('city')"></app-input>
         <app-input label="Область" [control]="getFormControl('region')" [required]="false"></app-input>
